--- a/students/templates/students/student_confirm_delete.html
+++ b/students/templates/students/student_confirm_delete.html
@@ -9,7 +9,7 @@
 <body>
     <form method="post">
         {% csrf_token %}
-        <h2>Tem certeza que quer remover o aluno {{ student.nome }}?</h2>
+        <h2>Tem certeza que quer remover o aluno {{ student.name }}?</h2>
         <button type="submit">Confirmar</button>
     </form>
 </body>
